<resources>
    <string name="app_name">Music App</string>


    <string name="n_text">Now Playing</string>
    <string name="n_symbol">N</string>
    <string name="n_number">7</string>

    <string name="p_text">Playlist</string>
    <string name="p_symbol">P</string>
    <string name="p_number">15</string>

    <string name="li_text">List Artist</string>
    <string name="li_symbol">Li</string>
    <string name="li_number">3</string>

    <string name="se_text">Search Screen</string>
    <string name="se_symbol">Se</string>
    <string name="se_number">34</string>

    <!--Explanation of the purpose for each Activity-->

    <string name="explain_Now_Playiny">The purpose of this activity is to play the differents songs on the app</string>
    <string name="explain_Playlist">On this activity shows all songs found on the specific music folder and it is created a playlist.</string>
    <string name="explain_List_Artist">On this activity you get the names of the artist from the songs, and they are listed with information obtained from some internet through an API website.</string>
    <string name="explain_Search_Screen">An activity to search on the device the specific song, artist or album that have been obtained from the songs.</string>
</resources>
