<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kikisnight.musicapp.NowPlayingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/subactivity_margin"
    android:background="@drawable/rounded_corner">

    <TextView
        style="@style/NumberPeriodicTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/li_number" />

    <TextView
        android:id="@+id/li_Letter"
        style="@style/PeriodicTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/li_symbol" />

    <TextView
        style="@style/LittlePeriodicTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/li_Letter"
        android:layout_centerHorizontal="true"
        android:text="@string/li_text" />

</RelativeLayout>
